# htlogicalgates

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  test.py
.github/workflows/: publish-python.yml  run-tests.yml
doc/: getting_started.ipynb  tutorial.ipynb  tutorial_results.json  tutorial_tailor_multiple_gates.ipynb
examples/: 2color832_CZ03.txt  color832_HS0.txt  color832_prepare_ppp.txt  color832_prepare_zzz.txt  color832_read_ppp.txt  color832_read_zzz.txt
src/htlogicalgates/: __init__.py  _global_vars.py  _utility.py  circuit.py  connectivity.py  htlogicalgates.py  qecc.py  quantum_ecc.py  stabilizercode.py  stabilizercodes.py
src/htlogicalgates/codes/: __init__.py  codes.py
src/htlogicalgates/grb_interface/: grb_enviroment.py  grb_gates.py  grb_math_interface.py
src/htlogicalgates/resources/: __init__.py  encodings.json  resources.py
src/htlogicalgates/symplectic_rep/: __init__.py  circuit.py  clifford_gate.py  helper.py  random_symplectic.py
tests/: test_circuit.py  test_htlogicalgates.py  test_stabilizercode.py  test_symplectic_rep.py  test_tailor_logical_gate.py  test_test.py
