[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "htlogicalgates"
version = "0.2.0"
description = "Find circuit implementations for logical gates of QECCs."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "erkue"}]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
]
keywords = ["quantum information", "quantum error correction", "quantum circuit", "logical gates"]
dependencies = [
    "gurobipy>=11.0",
    "numpy>=1.23",
]

[project.optional-dependencies]
progressbar = [
  "tqdm>=4.66.5"
]


[project.urls]
"Homepage" = "https://github.com/erkue/htlogicalgates"
"Bug Tracker" = "https://github.com/erkue/htlogicalgates/issues"